--- a/Build.xml
+++ b/Build.xml
@@ -32,7 +32,7 @@ classpath = "WebContent/WEB-INF/lib/checkstyle-7.8.2-all.jar"/>
 <pathelement path="D:/Jenkins/SampleWebApp/WebContent/WEB-INF/lib/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 </classpath>
 <test name="junit.TestCalculator" haltonfailure="no" outfile="TestCalculator_junitResult.txt"> 
-<formatter type ="plain"/>
+<formatter type ="xml"/>
 </test>
 </junit>
 </target>
