--- a/Build.xml
+++ b/Build.xml
@@ -24,7 +24,7 @@ classpath = "WebContent/WEB-INF/lib/checkstyle-7.8.2-all.jar"/>
 </checkstyle>
 </target>
 
-<target name="junit" depends "compile">
+<target name="junit" depends = "compile">
 <junit printsummary="yes" haltonfailure="yes">
 <classpath>
 <pathelement location="D:/Jenkins/SampleWebApp/build/classes"/>
